--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,6 +39,8 @@ security:
          - { path: '^/courses/create', roles: ROLE_USER }
          - { path: '^/courses/edit', roles: ROLE_USER }
          - { path: '^/courses/delete', roles: ROLE_USER }
+         - { path: '^/episodes', roles: ROLE_USER }
+         - { path: '^/categories', roles: ROLE_USER } #   <- HAVE TO BE CHANGE TO ROLE_ADMIN LATER
 
 when@test:
     security:
