feat: user courses panel added

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -41,6 +41,7 @@ security:
          - { path: '^/courses/delete', roles: ROLE_USER }
          - { path: '^/episodes', roles: ROLE_USER }
          - { path: '^/categories', roles: ROLE_USER } #   <- HAVE TO BE CHANGE TO ROLE_ADMIN LATER
+         - { path: '^/MyCoursesPanel', roles: ROLE_USER }
 
 when@test:
     security:
