feat: pagination, navbar, overall progress on frontend

--- a/.env
+++ b/.env
@@ -39,3 +39,12 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 MAILER_DSN=smtp://username:password@smtp.gmail.com:587
 ###< symfony/mailer ###
+
+CLOUDINARY_CLOUD_NAME="dytzaabsw"
+CLOUDINARY_API_KEY="579754725244683"
+CLOUDINARY_API_SECRET="KXQI3kW-ESNFVTcxMu_WHdNsPfw"
+CLOUDINARY_IMAGE_URL="https://res.cloudinary.com/dytzaabsw/image/upload/"
+CLOUDINARY_VIDEO_URL="https://res.cloudinary.com/dytzaabsw/video/upload/"
+CLOUDINARY_IMAGE_COURSE_FOLDER="CourseSite/Course"
+CLOUDINARY_IMAGE_EPISODE_FOLDER="CourseSite/Episode/Image"
+CLOUDINARY_VIDEO_EPISODE_FOLDER="CourseSite/Episode/Video"
