--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,12 @@
 /public/uploads/
 /assets/vendor/
 ###< symfony/asset-mapper ###
+
+/config/packages/cloudinary.yaml
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
