feat: mylearning, purchase system in progres

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -47,6 +47,7 @@ security:
          - { path: '^/categories', roles: ROLE_USER } #   <- HAVE TO BE CHANGE TO ROLE_ADMIN LATER
          - { path: '^/MyCoursesPanel', roles: ROLE_USER }
          - { path: '^/cart', roles: ROLE_USER }
+         - { path: '^/checkout', roles: ROLE_USER }
 
 when@test:
     security:
