--- a/composer.json
+++ b/composer.json
@@ -42,8 +42,10 @@
         "symfony/translation": "7.1.*",
         "symfony/twig-bundle": "7.1.*",
         "symfony/ux-dropzone": "^2.20",
+        "symfony/ux-live-component": "^2.20",
         "symfony/ux-toggle-password": "^2.20",
         "symfony/ux-turbo": "^2.20",
+        "symfony/ux-twig-component": "^2.20",
         "symfony/validator": "7.1.*",
         "symfony/web-link": "7.1.*",
         "symfony/webpack-encore-bundle": "^2.1",
