--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -48,6 +48,7 @@ security:
          - { path: '^/MyCoursesPanel', roles: ROLE_USER }
          - { path: '^/cart', roles: ROLE_USER }
          - { path: '^/checkout', roles: ROLE_USER }
+         - { path: '^/editProfile', roles: ROLE_USER }
 
 when@test:
     security:
