feat: mailer, course draft, admin panel

--- a/.env
+++ b/.env
@@ -37,7 +37,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://username:password@smtp.gmail.com:587
+# MAILER_DSN=smtp://username:password@smtp.gmail.com:587
 ###< symfony/mailer ###
 
 CLOUDINARY_CLOUD_NAME="dytzaabsw"
@@ -48,3 +48,10 @@ CLOUDINARY_VIDEO_URL="https://res.cloudinary.com/dytzaabsw/video/upload/"
 CLOUDINARY_IMAGE_COURSE_FOLDER="CourseSite/Course"
 CLOUDINARY_IMAGE_EPISODE_FOLDER="CourseSite/Episode/Image"
 CLOUDINARY_VIDEO_EPISODE_FOLDER="CourseSite/Episode/Video"
+
+
+###> symfony/mailgun-mailer ###
+MAILER_DSN=mailgun+api://cd69b9b97382c72bd5853a8dee469cbf-c02fd0ba-e333f0a3:sandboxf91b04a7601546cea9abae0ed9b21675.mailgun.org@default
+# MAILER_DSN=mailgun+smtp://USERNAME:PASSWORD@default?region=us
+###< symfony/mailgun-mailer ###
+ISODE_FOLDER="CourseSite/Episode/Video"
