--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "fzaninotto/faker": "^1.5",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.30",
+        "ramsey/uuid-doctrine": "^2.1",
         "symfony/asset": "7.1.*",
         "symfony/asset-mapper": "7.1.*",
         "symfony/console": "7.1.*",
@@ -28,6 +29,7 @@
         "symfony/http-client": "7.1.*",
         "symfony/intl": "7.1.*",
         "symfony/mailer": "7.1.*",
+        "symfony/mailgun-mailer": "7.1.*",
         "symfony/mime": "7.1.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/notifier": "7.1.*",
