Add config files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 
+/.env
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
@@ -33,4 +34,4 @@
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
-.env
+
