--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -1,9 +1,2 @@
-name: CourseSite
+name: course-site
 type: 'php:8.3'
-
-env:
-    DB_HOST: postgresql
-    DB_PORT: 5432
-    DB_USER: your_database_user
-    DB_PASSWORD: your_database_password
-    DB_NAME: your_database_name
