--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -2,7 +2,7 @@ name: course-site
 type: 'php:8.3'
 disk: 1024
 relationships:
-     postgresqldb:
+     postgresqldb: 'database'
 
 web:
   commands:
