--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -1,3 +1,2 @@
-"https://main-bvxea6i-ebogbvn63o3gi.eu-5.platformsh.site/":
-  type: upstream
-  upstream: course-site:http
+"https://{all}/": { type: upstream, upstream: "course-site:http" }
+"http://{all}/": { type: redirect, to: "https://{all}/" }
