--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+APP_ENV=dev
 APP_SECRET=a5bd55332c586af8fb696cbc02a23f65
 ###< symfony/framework-bundle ###
 ###> doctrine/doctrine-bundle ###
@@ -25,7 +25,7 @@ APP_SECRET=a5bd55332c586af8fb696cbc02a23f65
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+DATABASE_URL="postgresql://postgres:admin123@127.0.0.1:5432/CourseSite?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 ###> symfony/messenger ###
 # Choose one of the transports below
