--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,6 @@
         "phpstan/phpdoc-parser": "^1.30",
         "ramsey/uuid-doctrine": "^2.1",
         "symfony/asset": "7.1.*",
-        "symfony/asset-mapper": "7.1.*",
         "symfony/console": "7.1.*",
         "symfony/doctrine-messenger": "7.1.*",
         "symfony/dotenv": "7.1.*",
@@ -88,8 +87,7 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd",
-            "importmap:install": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
