--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -44,8 +44,12 @@ hooks:
     build: |
         set -x -e
 
-        curl -sL https://deb.nodesource.com/setup_22.x | bash -
-        apt-get install -y nodejs
+        curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash
+        export NVM_DIR="$HOME/.nvm"
+        [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+
+        nvm install 22
+        nvm use 22
 
         npm install
         npm run build
