--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -44,6 +44,8 @@ hooks:
     build: |
         set -x -e
 
+        unset NPM_CONFIG_PREFIX
+
         curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash
         export NVM_DIR="$HOME/.nvm"
         [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
