--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -53,7 +53,7 @@ hooks:
         nvm install 22
         nvm use 22
 
-        npm install
+        npm install --force
         npm run build
 
         NODE_VERSION=22 symfony-build
