--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "encore production --progress"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@hotwired/stimulus": "^3.2.2",
     "@symfony/stimulus-bridge": "^3.2.2",
     "bootstrap": "^5.3.3",
